Fix top bar background color/z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -66,6 +66,8 @@ body {
   justify-content: space-between;
   align-items: center;
   box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+  z-index: 1000;
+  background-color: var(--bg-color);
 }
 
 #theme-toggle {
